--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 REACT_APP_SERVER_DOMAIN=http://localhost:5000/api
-REACT_APP_CLOUDINARY_BASE_URL=https://api.cloudinary.com/v1_1/<Replace with your CLOUD_NAME>/image/upload
-REACT_APP_CLOUDINARY_CLOUD_NAME= 
-REACT_APP_CLOUDINARY_PRESET= 
+REACT_APP_CLOUDINARY_BASE_URL=https://api.cloudinary.com/v1_1/daqqrxcgq/image/upload
+REACT_APP_CLOUDINARY_CLOUD_NAME=daqqrxcgq
+REACT_APP_CLOUDINARY_PRESET=my_preset
 REACT_FORMIK_SECRET= Enter your endpoint from https://formspree.io/
