changes to package json

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 REACT_APP_SERVER_DOMAIN=http://localhost:5000/api
-REACT_APP_CLOUDINARY_BASE_URL=https://api.cloudinary.com/v1_1/<Replace with your CLOUD_NAME>/image/upload
-REACT_APP_CLOUDINARY_CLOUD_NAME= 
+REACT_APP_CLOUDINARY_BASE_URL=https://api.cloudinary.com/v1_1/dj5nmg07k/image/upload
+REACT_APP_CLOUDINARY_CLOUD_NAME= dj5nmg07k
 REACT_APP_CLOUDINARY_PRESET= 
-REACT_FORMIK_SECRET= Enter your endpoint from https://formspree.io/
+REACT_FORMIK_SECRET= https://formspree.io/f/mzzbpnwn
