--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Doctor appointment website",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "pub": "node server.js",
+    "start": "nodemon server.js"
   },
   "author": "Avinash905",
   "license": "ISC",
@@ -16,5 +17,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "mongoose": "^6.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
