--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "scripts": {
     "pub": "node server.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000"
   },
   "author": "Avinash905",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -19,6 +21,8 @@
     "mongoose": "^6.9.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
